usando tweets em ptbr

--- a/senti_hiv.ipynb
+++ b/senti_hiv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def read():\n",
@@ -88,7 +88,7 @@
     "    df[\"score\"] = df.Sentiment.apply(lambda x: scores[x])    \n",
     "    df[\"neutrality\"] = df.score.apply(lambda x: 1 if x == 0 else 0) \n",
     "    df.drop(\"Sentiment\", inplace=True, axis=1)\n",
-    "    df.rename({\"OriginalTweet\": \"text\"}, axis=1, inplace=True)    \n",
+    "    df[\"text\"] = df.OriginalTweet\n",
     "    df[\"text\"] = df.text.apply(lambda x: remove_urls(x))\n",
     "    df[\"text\"] = df.text.apply(lambda x: remove_mentions(x))\n",
     "    df[\"text\"] = df.text.apply(lambda x: remove_html(x))\n",
