--- a/senti_hiv_scikit.ipynb
+++ b/senti_hiv_scikit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -22,24 +22,31 @@
     "import re\n",
     "\n",
     "import nltk\n",
-    "nltk.download('stopwords');\n",
+    "nltk.download('stopwords')\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import numpy as np\n",
+    "\n",
     "from nltk.corpus import stopwords\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.svm import LinearSVC\n",
-    "from sklearn.metrics import confusion_matrix, classification_report"
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "outputs": [],
    "source": [
     "def read():\n",
-    "    return pd.read_csv(\"dataset/Corona_NLP_train.csv\"), \\\n",
-    "           pd.read_csv(\"dataset/Corona_NLP_test.csv\")\n",
+    "    # return pd.read_csv(\"dataset/Corona_NLP_train.csv\"), \\\n",
+    "    #        pd.read_csv(\"dataset/Corona_NLP_test.csv\")\n",
+    "    df = pd.read_csv('dataset/Covid BR Tweets/opcovidbr.csv', index_col='Id')\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(df, test_size=0.2, random_state=123)\n",
+    "    \n",
+    "    return \n",
     "\n",
     "def remove_urls(text):\n",
     "    url_remover = re.compile(r'https?://\\S+|www\\.\\S+')\n",
@@ -70,7 +77,8 @@
     "    return ws_remover.sub(r' ', str(text)).strip()\n",
     "\n",
     "def remove_stopwords(text):\n",
-    "    stop_words = set(stopwords.words(\"english\"))     \n",
+    "    # stop_words = set(stopwords.words(\"english\"))     \n",
+    "    stop_words = set(stopwords.words('portuguese'))     \n",
     "    return \" \".join([word for word in text.split(\" \") if word not in stop_words]) \n",
     "    \n",
     "def lowering(text):\n",
@@ -87,8 +95,7 @@
     "    }\n",
     "    df[\"score\"] = df.Sentiment.apply(lambda x: scores[x])\n",
     "    df.drop(\"Sentiment\", inplace=True, axis=1)\n",
-    "    df.rename({\"OriginalTweet\": \"text\"}, axis=1, inplace=True)\n",
-    "    \n",
+    "    df[\"text\"] = df.OriginalTweet    \n",
     "    df[\"text\"] = df.text.apply(lambda x: remove_urls(x))\n",
     "    df[\"text\"] = df.text.apply(lambda x: remove_mentions(x))\n",
     "    df[\"text\"] = df.text.apply(lambda x: remove_html(x))\n",
@@ -121,7 +128,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('dataset/Covid BR Tweets/opcovidbr.csv', index_col='Id')\n",
+    "df_train, df_test = train_test_split(df, test_size=0.2, random_state=123)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(121, 6)"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 50
+    }
+   ],
+   "source": [
+    "df_train.shape\n",
+    "df_test.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "df_train, df_test = cleaning()"
@@ -136,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# Este é o algoritmo utilizado para vetorizar os textos dos tweets\n",
@@ -161,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -188,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
