--- a/experimento_1_i.ipynb
+++ b/experimento_1_i.ipynb
@@ -2,21 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true,
     "pycharm": {
-     "is_executing": true
+     "is_executing": false
     }
    },
    "outputs": [
     {
      "name": "stderr",
+     "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package stopwords to\n[nltk_data]     C:\\Users\\HC\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\HC\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
-     ],
-     "output_type": "stream"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Microsoft Visual C++ Redistributable is not installed, this may lead to the DLL load failure.\n",
+      "                 It can be downloaded at https://aka.ms/vs/16/release/vc_redist.x64.exe\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading https://raw.githubusercontent.com/stanfordnlp/stanza-resources/master/resources_1.1.0.json: 122kB [00:00, 1.14MB/s]                    \n",
+      "2020-11-17 00:18:54 INFO: Downloading default packages for language: pt (Portuguese)...\n",
+      "2020-11-17 00:18:54 INFO: File exists: C:\\Users\\HC\\stanza_resources\\pt\\default.zip.\n",
+      "2020-11-17 00:18:58 INFO: Finished downloading models and saved to C:\\Users\\HC\\stanza_resources.\n",
+      "Downloading https://raw.githubusercontent.com/stanfordnlp/stanza-resources/master/resources_1.1.0.json: 122kB [00:00, 1.87MB/s]                    \n",
+      "2020-11-17 00:18:59 INFO: Downloading default packages for language: en (English)...\n",
+      "2020-11-17 00:19:00 INFO: File exists: C:\\Users\\HC\\stanza_resources\\en\\default.zip.\n",
+      "2020-11-17 00:19:09 INFO: Finished downloading models and saved to C:\\Users\\HC\\stanza_resources.\n"
+     ]
     }
    ],
    "source": [
@@ -28,7 +50,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import stanza\n",
-    "\n",
+    "stanza.download('pt')\n",
+    "stanza.download('en')\n",
     "from nltk.corpus import stopwords\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.svm import LinearSVC\n",
@@ -37,7 +60,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def read():\n",
@@ -103,7 +132,8 @@
     "    \n",
     "    # df = df.loc[:,[\"twitter\", \"polarity\"]]\n",
     "    # df[\"score\"] = df.polarity\n",
-    "    df[\"text\"] = df.twitter    \n",
+    "    # df[\"text\"] = df.twitter    \n",
+    "    df[\"text\"] = df.OriginalTweet    \n",
     "    df[\"text\"] = df.text.apply(lambda x: remove_urls(x))\n",
     "    df[\"text\"] = df.text.apply(lambda x: remove_mentions(x))\n",
     "    df[\"text\"] = df.text.apply(lambda x: remove_html(x))\n",
@@ -113,11 +143,13 @@
     "    df[\"text\"] = df.text.apply(lambda x: remove_excessive_whitespace(x))\n",
     "    df[\"text\"] = df.text.apply(lambda x: remove_stopwords(x))\n",
     "    df[\"text\"] = df.text.apply(lambda x: lowering(x))\n",
-    "    nlp = stanza.Pipeline(lang='pt', processors='tokenize,mwt,pos,lemma')\n",
+    "    # Removing messages that are too short.\n",
+    "    df = df[df.text.apply(lambda x: len(x.split(\" \")) > 2)]\n",
+    "    \n",
+    "    # nlp = stanza.Pipeline(lang='pt', processors='tokenize,mwt,pos,lemma')\n",
+    "    nlp = stanza.Pipeline(lang='en', processors='tokenize,pos,lemma')\n",
     "    df[\"text\"] = df.text.apply(lambda x: lemmatization(x, nlp))\n",
     "    \n",
-    "    # Removing messages that are too short.\n",
-    "    df = df[df.text.apply(lambda x: len(x) > 2)]   \n",
     "    \n",
     "    return df\n",
     "\n",
@@ -127,33 +159,52 @@
     "    df_test = clean(df_test)\n",
     "    \n",
     "    return df_train, df_test"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
+   "metadata": {
+    "pycharm": {
+     "is_executing": true,
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2020-11-17 00:19:33 INFO: Loading these models for language: en (English):\n",
+      "=======================\n",
+      "| Processor | Package |\n",
+      "-----------------------\n",
+      "| tokenize  | ewt     |\n",
+      "| pos       | ewt     |\n",
+      "| lemma     | ewt     |\n",
+      "=======================\n",
+      "\n",
+      "2020-11-17 00:19:33 INFO: Use device: cpu\n",
+      "2020-11-17 00:19:33 INFO: Loading: tokenize\n",
+      "2020-11-17 00:19:33 INFO: Loading: pos\n",
+      "2020-11-17 00:19:35 INFO: Loading: lemma\n",
+      "2020-11-17 00:19:35 INFO: Done loading processors!\n"
+     ]
+    }
+   ],
    "source": [
     "df_train, df_test = cleaning()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Este é o algoritmo utilizado para vetorizar os textos dos tweets\n",
@@ -166,18 +217,17 @@
     "y_train = df_train.score\n",
     "X_test = tfidf_fitter.transform(df_test.text)\n",
     "y_test = df_test.score"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "model =  LinearSVC(verbose=1, max_iter=500, \n",
@@ -185,18 +235,17 @@
     "                   dual=False)\n",
     "model.fit(X_train, y_train)\n",
     "y_pred = model.predict(X_test)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "print('CLASSIFICATION METRICS\\n')\n",
@@ -215,29 +264,7 @@
     "plt.ylabel('Actual')\n",
     "plt.xlabel('Predicted')\n",
     "plt.title(\"CONFUSION MATRIX - LinearSVC\\n\", size=16);"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
-    }
-   }
+   ]
   }
  ],
  "metadata": {
@@ -249,25 +276,25 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.9"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
